--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -48,3 +48,44 @@ jobs:
       - name: run tests
         run: |
           go test -v ./...
+
+  generate:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    needs:
+      - golangci
+      - test
+    outputs:
+      entries: ${{ steps.load-managed-cfg.outputs.entries }}
+    steps:
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # v3.1.0
+
+      - uses: actions/setup-go@c4a742cab115ed795e34d4513e2cf7d472deb55f # v3.3.1
+        with:
+          go-version: 1.19
+
+      - name: run libgenerator with stored config
+        run: |
+          go run ./cmd/libgenerator \
+            gen --out "$(pwd)/generator-out" --config "$(pwd)/cfg/managed.json" --loglevel debug
+
+      - name: create artifact
+        uses: actions/upload-artifact@83fd05a356d7e2593de66fc9913b3002723633cb # v3.1.1
+        with:
+          name: generator-out
+          path: generator-out/
+
+      # Set the contents of cfg/managed.json as a github output so that we can run a matrix job where a GitHub Action
+      # job runs for each entry in the config.
+      - id: load-managed-cfg
+        run: echo entries="$(cat "$(pwd)/cfg/managed.json" | jq -Mc .)" >> "$GITHUB_OUTPUT"
+
+  copy:
+    if: github.event_name == 'pull_request'
+    needs: generate
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        entry: ${{ fromJSON(needs.generate.outputs.entries) }}
+    steps:
+      - run: echo "${{ matrix.entry.repo }}"
