Configure regex for updating provider versions
Signed-off-by: Yoriyasu Yano <430092+yorinasub17@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,23 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
+  "extends": ["config:base"],
+  "enabledManagers": ["regex"],
+  "packageRules": [
+    {
+      "matchManagers": ["regex"],
+      "extractVersion": "v(?<version>\\d+\\.\\d+\\.\\d+)"
+    }
+  ],
+  "regexManagers": [
+    {
+      "fileMatch": [
+        "(^|/)cfg/managed.json$"
+      ],
+      "matchStrings": [
+        "\\s+\"src\": \"(?<org>[^\/]+)\/(?<providerName>[^\"]+)\",\\s+\"version\": \"=(?<currentValue>.+)\""
+      ],
+      "depNameTemplate": "{{ org }}/terraform-provider-{{ providerName }}",
+      "datasourceTemplate": "github-releases"
+    }
   ]
 }
