--- a/.github/workflows/lint-test-and-generate.yml
+++ b/.github/workflows/lint-test-and-generate.yml
@@ -64,6 +64,13 @@ jobs:
         with:
           go-version: 1.19
 
+      - name: setup jb packages for docsonnet steps
+        run: |
+          go install github.com/jsonnet-bundler/jsonnet-bundler/cmd/jb@latest
+          jb install
+          mkdir generator-out
+          mv vendor generator-out/vendor
+
       - name: run libgenerator with stored config
         run: |
           go run ./cmd/libgenerator \
@@ -101,6 +108,19 @@ jobs:
         run: |
           tar -xvf ./generator-out.tar.gz
 
+      - uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568 # v3.5.0
+        with:
+          go-version: 1.19
+
+      - name: generator docs with docsonnet
+        run: |
+          # TODO: Replace with jsonnet-libs when relevant PRs are merged
+          go install github.com/yorinasub17/docsonnet@installable
+          docsonnet \
+            -J "$(pwd)/generator-out/vendor" \
+            -o "$(pwd)/generator-out/${{ matrix.entry.repo }}/docs/${{ matrix.entry.subdir }}" \
+            -r "$(pwd)/generator-out/${{ matrix.entry.repo }}/${{ matrix.entry.subdir }}/main.libsonnet"
+
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # v3.1.0
         with:
           token: ${{ secrets.TFLIBSONNET_CI_GITHUB_TOKEN }}
@@ -117,12 +137,13 @@ jobs:
 
       - name: clear tracked files before generating (to support deletes)
         run: |
+          rm -vr ${{ matrix.entry.repo }}/docs/${{ matrix.entry.subdir }} || true
           rm -vr ${{ matrix.entry.repo }}/${{ matrix.entry.subdir }} || true
 
       - name: copy generated code and update permissions
         run: |
           rsync -va ./generator-out/${{ matrix.entry.repo }}/ ${{ matrix.entry.repo }}
-          ls ${{ matrix.entry.repo }}
+          tree ${{ matrix.entry.repo }}
           cd ${{ matrix.entry.repo }}
           git status
 
