--- a/.github/workflows/lint-test-and-generate.yml
+++ b/.github/workflows/lint-test-and-generate.yml
@@ -119,7 +119,7 @@ jobs:
           docsonnet \
             -J "$(pwd)/generator-out/vendor" \
             -o "$(pwd)/generator-out/${{ matrix.entry.repo }}/docs/${{ matrix.entry.subdir }}" \
-            -r "$(pwd)/generator-out/${{ matrix.entry.repo }}/${{ matrix.entry.subdir }}/main.libsonnet"
+            "$(pwd)/generator-out/${{ matrix.entry.repo }}/${{ matrix.entry.subdir }}/main.libsonnet"
 
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # v3.1.0
         with:
