Cosign requires yes prompt
Signed-off-by: Yoriyasu Yano <430092+yorinasub17@users.noreply.github.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -27,13 +27,13 @@ signs:
     signature: "${artifact}-keyless.sig"
     certificate: "${artifact}-keyless.pem"
     cmd: cosign
-    args: ["sign-blob", "--output-signature", "${artifact}-keyless.sig", "--output-certificate", "${artifact}-keyless.pem", "${artifact}"]
+    args: ["sign-blob", "-y", "--output-signature", "${artifact}-keyless.sig", "--output-certificate", "${artifact}-keyless.pem", "${artifact}"]
   - id: checksum-keyless
     artifacts: checksum
     signature: "${artifact}-keyless.sig"
     certificate: "${artifact}-keyless.pem"
     cmd: cosign
-    args: ["sign-blob", "--output-signature", "${artifact}-keyless.sig", "--output-certificate", "${artifact}-keyless.pem", "${artifact}"]
+    args: ["sign-blob", "-y", "--output-signature", "${artifact}-keyless.sig", "--output-certificate", "${artifact}-keyless.pem", "${artifact}"]
 
 checksum:
   name_template: "{{ .ProjectName }}_checksums.txt"
